--- a/src/styles/globals.sass
+++ b/src/styles/globals.sass
@@ -1,14 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap')
+@import 'Extras/navbar.scss'
+@import 'Extras/structure.scss'
+
 $body-color: #333
 $body-font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif
 $body-background-color: #fff
+$menu-width: 200px
 
 html,
 body
   padding: 0 //
   margin: 0 //
   font-family: $body-font-family
-  min-height: 100vh
-  background-image: linear-gradient(to bottom, #2e026d, #15162c)
+  //margin-top: 50px
+  //min-height: 100vh
 
 a
   color: inherit //
@@ -36,12 +41,12 @@ nav
   display: flex
   flex-direction: row
   align-items: center
-  gap: 5px
 
 .navimg
   display: block
   height: 2rem
   border-radius: 50%
+  margin-left: 10px
 
 .nav-wrapper
   display: flex
@@ -59,6 +64,7 @@ nav
   height: 2rem
 
 .menu
+  position: relative
   display: flex
   gap: 1rem
   align-items: center
