--- a/src/styles/globals.sass
+++ b/src/styles/globals.sass
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap')
 @import 'Extras/navbar.scss'
 @import 'Extras/structure.scss'
+@import 'Extras/Post.scss'
 
 $body-color: #333
 $body-font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif
