--- a/src/styles/globals.sass
+++ b/src/styles/globals.sass
@@ -10,11 +10,10 @@ $menu-width: 200px
 
 html,
 body
-  padding: 0 //
-  margin: 0 //
-  font-family: $body-font-family
-  //margin-top: 50px
-  //min-height: 100vh
+    margin: 10px 10px auto
+    width: auto
+    margin-top: 70px
+    font-family: 'Source Sans Pro', sans-serif
 
 a
   color: inherit //
