--- a/src/styles/Extras/Post.scss
+++ b/src/styles/Extras/Post.scss
@@ -44,6 +44,24 @@
     align-items: center;
   }
 
+  .botones {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .pcontenedor {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 2rem;
+    border: #000 solid 1px;
+    background-color: #ececec;
+  }
+
   .nav2 {
     display: flex;
     //border: red solid 1px;
@@ -63,7 +81,7 @@
     border-bottom: #000 solid 1px;
     border-radius: 10px;
     padding: 1rem;
-    background: white;
+    background: rgb(247, 181, 229);
     transition: box-shadow 0.1s ease-in;
     .post__img {
       width: 200px;
@@ -138,6 +156,23 @@
     padding-right: 1rem;
   }
 
-  button {
-    border: none;
+  hr {
+    border: 0;
+    border-top: 1px solid #00000036;
+    margin: 1rem 0;
+  }
+
+  .contact {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem 0;
+    padding: 20px;
+  }
+
+  .btnp {
+    margin-top: 5px;
+    background: #99cccc;
+    //border: #000 solid 1px;
+    border-radius: 10px;
+    padding: 1rem 2rem;
   }
