--- a/src/styles/Extras/structure.scss
+++ b/src/styles/Extras/structure.scss
@@ -215,6 +215,7 @@ address { font-style: normal; }
 .tm-bgcolor-1 { background-color: #F96699; }
 .tm-bgcolor-2 { background-color: #38CCCC; }
 .tm-bgcolor-3 { background-color: #99CCCC; }
+.tm-bgcolor-4 { background-color: #F9BE77; }
 .tm-border-rounded { border-radius: 15px; }
 
 .container {
