--- a/src/styles/Extras/Post.scss
+++ b/src/styles/Extras/Post.scss
@@ -47,7 +47,7 @@
   .botones {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
   }
   
