--- a/src/styles/Extras/Post.scss
+++ b/src/styles/Extras/Post.scss
@@ -65,11 +65,13 @@
   .nav2 {
     display: flex;
     //border: red solid 1px;
-    padding: 10px;
-    margin: 10px 30px 30px 30px;
+    font-size: 24px;
+    padding: 15px;
+
+    margin: 30px 30px 30px 30px;
     justify-content: space-between;
     align-items: center;
-    border-top: #000 solid 1px;
+    //border-top: #000 solid 1px;
     border-bottom: #000 solid 1px;
     border-radius: 10px;
 
