--- a/src/styles/Extras/structure.scss
+++ b/src/styles/Extras/structure.scss
@@ -468,15 +468,25 @@ address { font-style: normal; }
   color: #fff;
 }
 
+.subtext {
+  font-size: 1.2rem;
+  color: #212529;
+  opacity: .8;
+}
+
 .content {
-  border: red solid 1px;
-  max-width: 800px;
+  //border: red solid 1px;
+  //max-width: 800px;
   margin: auto;
-  padding: 0 15px;
+  padding: 20px;
   .profile{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 20px;
+    border-bottom: #544752 solid 2px;
+    border-style: none none dashed none;
+    //justify-content: space-between;
     align-items: center;
   }
 }
